tests/v0-fail/sequence.out
Running <root>/sequence.cli ...

printf "b\na\n"
---
b
a
---
ERROR: pattern literal at line <root>/sequence.cli:5 does not match output line "b"
[XX] missed sequence { ... }
  [XX] missed sequence { ... }
    [XX] missed "a" != "b"

❌ FAIL

<root>/sequence.cli FAILED
Error: pattern literal at line <root>/sequence.cli:5 does not match output line "b"

